--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio website complete</title>
+<title>Temurbek Portfolio | Web Designer</title>
+<meta name="description" content="Responsive portfolio website of Temurbek, showcasing web design projects and skills.">
+<meta name="keywords" content="Temurbek, web designer, portfolio, responsive website, Uzbekistan">
+
     </head>
     <body>
         <!--===== HEADER =====-->
