--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Temurbek</h2>
-                        <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
-                    </div>                                   
+                        <p class="about__text">I'm a detail-driven web developer and system automation specialist who blends creative design with technical precision. With a strong foundation in Windows administration, Git workflows, and deployment platforms like Render and Firebase, I craft digital experiences that are both visually striking and resource-efficient.
+
+My approach is pragmatic and iterative — I test, refine, and optimize every element, from lightweight portfolio templates to SEO metadata and image previews. Whether I'm suspending Windows update services with PowerShell or configuring a favicon for perfect Google indexing, I believe every detail matters.
+
+I thrive on solving platform-specific quirks, streamlining deployment pipelines, and ensuring that every site I build is discoverable, fast, and beautifully minimal. If you're looking for someone who can turn complexity into clarity and make your digital presence shine — you're in the right place.
+
+Would you like a shorter version for mobile view or a more creative tone for personal branding? I can tailor it to match your exact vibe.   </div>                                   
                 </div>
             </section>
 
