--- a/index.html
+++ b/index.html
@@ -95,7 +95,15 @@ Would you like a shorter version for mobile view or a more creative tone for per
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
+                        <p class="skills__text">System Administration & Automation: Expert in troubleshooting and automating Windows update services using CMD, PowerShell, Registry edits, and Task Scheduler.
+
+Web Development: Skilled in building minimalist, visually striking portfolio websites with lightweight codebases for fast performance.
+
+Deployment & Hosting: Deep understanding of Git, GitHub workflows, and deployment platforms like Render and Firebase. Experienced in configuring repositories, handling LF/CRLF warnings, and optimizing publish directories.
+
+SEO & Branding: Knowledgeable in setting up favicons, Open Graph images, and metadata to ensure professional presentation and discoverability on Google.
+
+Problem-Solving: Persistent and detail-oriented, with a methodical approach to testing, refining, and adapting solutions to platform-specific quirks.</p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
