--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Problem-Solving: Persistent and detail-oriented, with a methodical approach to t
             <div class="footer__social">
                 <a href="https://t.me/pythonkiler" class="footer__icon"><i class='bx bxl-telegram' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
             </div>
             <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
         </footer>
