--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta name="keywords" content="Temurbek, web designer, portfolio, responsive website, Uzbekistan">
 
     </head>
-    <body bgcolor="gray">
+    <body bgcolor="Bright White ">
         <!--===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
