--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Temurbek</span><br> Web Designer</h1>
 
-                    <a href="#" class="button">Contact</a>
+                    <a href="https://t.me/pythonkiler" class="button">Contact</a>
                 </div>
 
                 <div class="home__social">
